--- a/Dialogue.csproj
+++ b/Dialogue.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Dialogue.Web\**" />
+    <Content Remove="Dialogue.Web\**" />
+    <EmbeddedResource Remove="Dialogue.Web\**" />
+    <None Remove="Dialogue.Web\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
