Project models refactored, added chat handlers

--- a/Dialogue.csproj
+++ b/Dialogue.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="Dialogue.Web\Dialogue.Web.csproj" />
+  </ItemGroup>
+
 </Project>
