Added appsettings, changed view

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "MyConfig": {
+    "ServiceUrl": "http://localhost:58707/api"
     }
-  },
-  "AllowedHosts": "*"
 }
